# rust_ruby_code_writer

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
examples/: begin.rb  case_when.rb  complex_assignment.rb  complex_values.rb  constants.rb  documentation.rb  methods.rb  modules_to_combine.rb
src/: code_writer.rs  combine_modules.rs  documentation_context.rs  macros.rs  main.rs
src/tests/: edit_methods.rs  edit_methods_macros.rs  explore_constants.rs  insert_test_in_module.rs  mod.rs
