[package]
name = "ruby-code-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ruby-parser = "4.0.5+ruby-3.1.2"
escape-bytes = "0.1.1"

[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"